tests/rosetta/out/Kotlin/a+b.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/a+b.kt:11:13: error: unresolved reference: int
    val a = int(_input())
            ^
/tmp/a+b.kt:12:13: error: unresolved reference: int
    val b = int(_input())
            ^
