tests/rosetta/out/Kotlin/a+b.kt
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:11:28Z
fun String.starts_with(prefix: String): Boolean = this.startsWith(prefix)

fun _input(): String { return readLine() ?: "" }
// Code generated from a+b.mochi

/**
 * Auto-generated from Mochi
 */
fun main(): Unit {
    val a = int(_input())
    val b = int(_input())
    println(a + b)
}

